# brain-idp-flow

./: .gitignore  pyproject.toml  requirements.txt
colab/: 00_setup.ipynb  01_baseline_esmfold.ipynb  02_train_and_eval.ipynb  02_train_flow.ipynb  03_discovery.ipynb  03_eval.ipynb  04_trajectory_discovery.ipynb  05_dms_discovery.ipynb  06_full_pipeline.ipynb  10_master_pipeline.ipynb  11_hybrid_model.ipynb  12_esm2_3b_experiment.ipynb
configs/: baseline.yaml  flow.yaml  flow_3b.yaml  flow_650m.yaml  flow_ctrl_150m.yaml  flow_ctrl_650m.yaml  targets.yaml
paper/: cover_letter.tex  draft_v1.md  main.tex  references.bib
scripts/: build_dataset.py  fetch_ped.py  run_eval.py  run_sample.py  run_train.py
src/brain_idp_flow/: __init__.py  app.py  sample.py  targets.py  train.py
src/brain_idp_flow/analysis/: aggregation_predictor.py  embedding_analysis.py  esm2_llr.py  ml_predictor.py  mutation_scanner.py  ped_features.py  trajectory_analysis.py
src/brain_idp_flow/baseline/: esmfold_infer.py
src/brain_idp_flow/data/: dataset.py  dms_loader.py  pdb_loader.py  ped_loader.py
src/brain_idp_flow/eval/: compare.py  plots.py
src/brain_idp_flow/features/: seq_embed.py
src/brain_idp_flow/geometry/: metrics.py  se3.py
src/brain_idp_flow/model/: embedding_predictor.py  flow_matcher.py  hybrid_predictor.py  structure_head.py
tests/: test_data.py  test_embedding_analysis.py  test_flow_matcher.py  test_geometry.py  test_hybrid.py
